apps/htb/htb-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htb-api
  namespace: htb
spec:
  selector:
    matchLabels:
      app: htb-api
  template:
    metadata:
      labels:
        app: htb-api
    spec:
      containers:
      - name: htb-api
        image: ghcr.io/alexvegas22/htb-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
