apps/htb/htb-api/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: htb-api
  namespace: htb
  labels:
    app: htb-api
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: htb-api
  type: ClusterIP
