apps/htb/htb-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: htb-api
  namespace: htb
spec:
  hostnames:
    - api.htb.v34l.com
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: htb-api
          port: 80
