apps/htb/htb-api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htb-api-ingress
  namespace: htb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: api.htb.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: htb-api
            port:
              number: 80
  tls:
    - hosts:
      - api.htb.v34l.com
      secretName: htb-api-secret
